--- a/TP3/EntregaFinal/css/tuberias.css
+++ b/TP3/EntregaFinal/css/tuberias.css
@@ -1,60 +1,28 @@
-html,body {
-    margin:100;
-    top:0px;
-    /*background:#000;*/
-  }
-
-#paloma {
-
-
-    /* Tamaño de la viñeta individual */
-    width:92px;
-    height:64px;
-    /* Cómo hay establecido un tamaño, centramos con margin:auto */
-   
-    /* Cargamos el sprite (el repeat-x se puede omitir, por defecto se repite) */
-    background:url(../img/bird.png) repeat-x;
-    /* Aplicamos la animación "walk": 0.8seg, 6 viñetas y repetimos infinitamente */
-    animation:aleteo 0.3s steps(3) infinite;
-      /* Posicionamos el personaje sobre el camino de madera */
-    position:relative;
-    left:350px;
-    top:290px;
-  
-    transform: rotate(-30deg);
-  
-}
-/*height(alto)*/
-/*width(ancho)*/
 #tuberiaInferior{
     
-    height:600px;
-    width: 800px;
-    background:url(../img/pipeInferior.png) no-repeat;
-    /*background-size: 138px 100px;*/
-    background-size: 138px 400px;
-    animation:movimientoInf 4s linear ;
-    background-position-y: var(--i);
-    
-    position:absolute;
+    height: 460px;
+    width: 80px;
+    background: url(../img/pipe.png) no-repeat;
+    background-size: cover;
+    position: absolute;
+    left: 800px;
+    bottom: 0px;
+   
+
+
 }
   
 #tuberiaSuperior{
-    /*(1)
-    height:800px;
-    width: 800px;
-    */
-    top:0px;
-    height:600px;
-    width: 800px;
-    /*background-image: url(../img/pipeSuperior.png) no-repeat;*/
-    background:url(../img/pipeSuperior.png) no-repeat;
-    /*background-position-y: 400px;
-    /*background-size: 138px 270px; (1)*/
-    background-size: 138px 150px;
-  
-    animation:movimientoSup 4s linear ;
+
+    
+    height:100px;
+    width: 138px;
+    background-size: contain;
+    background:url(../img/pipe.png) no-repeat;
+    transform: rotate(180deg);
+    
     position:absolute;
+    top:0px;
 
 }
   
@@ -65,42 +33,3 @@ html,body {
     display : none;
 }
   
-@keyframes movimientoSup {
-    0%{
-        background-position: 800px var(--i);
-    }
-    100%{
-        background-position: -138px var(--i);
-    }
-}
-@keyframes movimientoInf {
-    0%{
-        background-position: 800px var(--i);
-    }
-    100%{
-        
-        background-position: -138px var(--i);
-    }
-}
-
-
-@keyframes aleteo {
-    0%{
-        background-position: 0
-    }
-    100%{
-        background-position: -276px
-    }
-}
-
-
-#contenedor{
-    width: 800px;
-    height:600px;   
-    border: black 1px solid ;    
-    /*background:url(../img/flappy-height-test.png) repeat-x;*/
-    /* Aplicamos la animación "walk": 0.8seg, 6 viñetas y repetimos infinitamente */
-    /*animation:aleteo 1s steps(2) infinite;*/
-    position: absolute;
-
-}
