--- a/TP3/EntregaFinal/css/tuberias.css
+++ b/TP3/EntregaFinal/css/tuberias.css
@@ -1,6 +1,6 @@
 #tuberiaInferior{
     
-    height: 460px;
+    height: 220px;
     width: 80px;
     background: url(../img/pipe.png) no-repeat;
     background-size: cover;
@@ -15,12 +15,13 @@
 #tuberiaSuperior{
 
     
-    height:100px;
-    width: 138px;
-    background-size: contain;
+    height:200px;
+    width: 80px;
+    
     background:url(../img/pipe.png) no-repeat;
     transform: rotate(180deg);
-    
+    background-size: cover;
+    left: 800px;
     position:absolute;
     top:0px;
 
