--- a/TP3/EntregaFinal/css/tuberias.css
+++ b/TP3/EntregaFinal/css/tuberias.css
@@ -1,4 +1,4 @@
-#tuberiaInferior{
+.tuberiaInferior{
     
     height: 220px;
     width: 80px;
@@ -12,7 +12,7 @@
 
 }
   
-#tuberiaSuperior{
+.tuberiaSuperior{
 
     
     height:200px;
