--- a/TP5/EntregaFinal/styles/style.css
+++ b/TP5/EntregaFinal/styles/style.css
@@ -1,70 +1,115 @@
 body {
   margin: 0;
   background-color: #f4f0f5;
+  font-family: Roboto;
+  font-style: normal;
 }
 
 .header {
-
-
   width: 100%;
-    height: 70px;
-    background-color: #f7fcff;
-    position: fixed;
-    top: 0;
-    z-index: 1;
+  height: 70px;
+  background-color: #f7fcff;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
 }
 
 img {
   border: none;
+  width: 100%;
 }
 
 .logo {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  left: 14px;
-  top: 10px;
-  background: url(../img/icon/logo.png);
+    position: relative;
+    width: 50px;
+    height: 50px;
+    left: 10px;
 }
 
-.addPost {  
+.addPost {
   width: 100%;
-  height: 50px;  
+  height: 50px;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
-  border: 1px solid #CE93D8;
-
 }
 
 .fotoPerfil {
-    position: relative;
-    left: 10px;
-    top: 5px;    
-    width: 40px;
-    height: 40px;
-   
+  position: relative;
+  left: 10px;
+  top: 5px;
+  width: 40px;
+  height: 40px;
 }
 
 .section-central {
-    margin: 10px;
-    top: 70px;
-    position: relative;;
+  top: 70px;
+  position: relative;
 }
 
 .section-central article {
-    margin: 20px 0;
+  margin: 10px 0;
+}
+
+.publicacion {
+  width: 100%;
+  
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  
+ 
+}
+
+.hpublicacion {
+  display: flex;
+  height: 50px;
+  flex-direction: row;
+}
+
+.publicacion aside {
+    margin: 5px 10px;
+}
+
+.hpinfo {
+  display: flex;
+  height: 50px;
+  flex-direction: column;
+  position: relative;
+  left: 15px;
+  top: 5px;
+}
+
+h4 {
+  margin: 5px 0 1px 0;
+}
+
+span {
+  font-size: 10px;
+}
+
+text {
+    font-size: 14px; 
+}
+
+.botonera {
+    display: flex;
+    font-size: 1.5em;
+    width: 30%;
+    justify-content: space-evenly;
 }
 
 
-
-.publicacion {
-  
-width: 100%;
-height: 310px;
-background: #FFFFFF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 20px;
-border: 1px solid #CE93D8;
-
+.footer {
+    display: flex;
+    font-size: 1.5em;
+    height: 70px;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    bottom: 0;
+    background-color: #f7fcff;
 }
