--- a/TP5/EntregaFinal/styles/style.css
+++ b/TP5/EntregaFinal/styles/style.css
@@ -77,6 +77,7 @@ img {
 .hpinfo {
   display: flex;
   height: 50px;
+  width: 75%;
   flex-direction: column;
   position: relative;
   left: 15px;
@@ -114,3 +115,79 @@ text {
     bottom: 0;
     background-color: #f7fcff;
 }
+
+.iconChat {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  font-size: 1.5rem;
+  background-color: #f7fcff;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  align-items: center;
+  justify-content: space-around;
+  
+
+}
+
+.ultimoChat {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.icon {
+  font-size: 150%;
+  display: flex;
+  align-items: center;
+}
+
+.posTextChatInHeader {
+  margin-left: 10px;
+}
+.posIconSearch {
+  margin-left: 0.5rem;
+  align-items: center;
+}
+
+.posCloseChatInHeader {
+  margin-right: 10px;
+}
+
+.searchInChat {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  width: 70%;
+  max-width: 250px;
+  height: 1.3rem;
+  display: flex;
+  border-radius: 5px;
+  align-items: center;
+  font-size: 0.8rem;
+  background-color: #f4f0f5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.textSearch {
+  margin-left: 0.5rem;
+  font-size: 90%;
+}
+
+.onLine{
+  color: green;
+  font-size: 75%;
+  align-items: center;
+}
+
+.offLine{
+  color: red;
+  font-size: 75%;
+  align-items: center;
+}
+.ausente{
+  color: orange;
+  font-size: 75%;
+  align-items: center;
+}
+
