--- a/TP5/EntregaFinal/styles/style.css
+++ b/TP5/EntregaFinal/styles/style.css
@@ -18,19 +18,52 @@ body {
   padding: 0 10px;
 }
 
+.header-search{
+  width: 100%;
+  height: 70px;
+  background-color: #f7fcff;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 0 10px;
+}
+
+.header-profile {
+  width: 100%;
+  height: 70px;
+  background-color: #f7fcff;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px;
+}
+
 img {
   border: none;
   width: 100%;
 }
 
 .logo {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    left: 10px;
+  position: relative;
+  width: 50px;
+  height: 50px;
+  left: 10px;
 }
 
 .addPost {
+  width: 100%;
+  height: 50px;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.editProfile {
   width: 100%;
   height: 50px;
   background: #ffffff;
@@ -43,6 +76,21 @@ img {
   top: 5px;
   width: 40px;
   height: 40px;
+  border-radius: 50%;
+}
+
+.fotoProfile {
+  position: relative;
+  left: 10px;
+  top: 5px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+}
+
+.fotoPerfilComent {
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
 }
 
@@ -67,8 +115,14 @@ img {
   flex-direction: row;
 }
 
+.hprofile {
+  display: flex;
+  height: 50px;
+  flex-direction: row;
+}
+
 .publicacion aside {
-    margin: 5px 10px;
+  margin: 5px 10px;
 }
 
 .hpinfo {
@@ -90,27 +144,38 @@ span {
 }
 
 text {
-    font-size: 14px; 
+  font-size: 14px;
 }
 
 .botonera {
-    display: flex;
-    font-size: 1.5em;
-    width: 30%;
-    justify-content: space-evenly;
+  display: flex;
+  font-size: 1.3em;
+  width: 30%;
+  justify-content: space-evenly;
 }
 
-
 .footer {
-    display: flex;
-    font-size: 1.5em;
-    height: 70px;
-    width: 100%;
-    align-items: center;
-    justify-content: space-around;
-    position: fixed;
-    bottom: 0;
-    background-color: #f7fcff;
+  display: flex;
+  font-size: 1.5em;
+  height: 70px;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+  position: fixed;
+  bottom: 0;
+  background-color: #f7fcff;
+}
+
+.footer-comentario {
+  display: flex;
+  font-size: 1.2em;
+  height: 70px;
+  width: 100%;
+  align-items: center;
+  justify-content: space-evenly;
+  position: fixed;
+  bottom: 0;
+  background-color: #f7fcff;
 }
 
 .iconChat {
@@ -124,8 +189,6 @@ text {
   z-index: 1;
   align-items: center;
   justify-content: space-around;
-  
-
 }
 
 .ultimoChat {
@@ -185,18 +248,18 @@ text {
   font-size: 90%;
 }
 
-.onLine{
+.onLine {
   color: green;
   font-size: 75%;
   align-items: center;
 }
 
-.offLine{
+.offLine {
   color: red;
   font-size: 75%;
   align-items: center;
 }
-.ausente{
+.ausente {
   color: orange;
   font-size: 75%;
   align-items: center;
@@ -296,4 +359,93 @@ text {
   padding-bottom: 1% ;
   background-color: #C5CAE9;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+h2 {
+  margin: 0;
+}
+
+.botonera-reaction {
+  display: flex;
+  width: 100%;
+  height: 33px;
+  opacity: 0.75;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.reaction {
+  height: 15px;
+  opacity: 0.75;
+  font-size: 10px;
+  margin: 0 10px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.inpcomentar {
+  width: 70%;
+  height: 1.3rem;
+  border-radius: 5px;
+  background-color: #f4f0f5;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+}
+
+input {
+  border: none;
+}
+
+input::placeholder {
+  padding: 0 5px;
+}
+
+.cerrar {
+  position: relative;
+  right: 20px;
+  font-size: 2em;
+  font-weight: bold;
+}
+
+.send {
+  transform: rotate(45deg);
+}
+
+.comentario {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin: 10px !important;
+}
+
+.sec-comentario {
+  width: 85%;
+  background-color: #C5CAE9;
+  padding: 0 10px;
+  border-radius: 10px;
+  margin: 0 0 0 5px;
+}
+
+
+.inp-search {
+  width: 70%;
+  height: 1.3rem;
+  border-radius: 5px;
+  background-color: #f4f0f5;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+  
+}
+
+.inp-search::placeholder {
+  padding: 0 10px;
+}
+
+
+.search {
+  width: 70%;
+}
+
+.icon-search {
+  position: relative;
+   left: -25px;
+   font-weight: lighter;
 }
