--- a/TP5/EntregaFinal/styles/style.css
+++ b/TP5/EntregaFinal/styles/style.css
@@ -326,6 +326,8 @@ text {
 }
 
 .BoxChats {
+  display: flex;
+
   font-size: 0.8rem;
  }
 
@@ -384,7 +386,7 @@ h2 {
 }
 
 .inpcomentar {
-  width: 70%;
+  width: 50%;
   height: 1.3rem;
   border-radius: 5px;
   background-color: #f4f0f5;
@@ -448,4 +450,57 @@ input::placeholder {
   position: relative;
    left: -25px;
    font-weight: lighter;
+}
+
+.footerVacio {
+  height: 70px;
+  width: 100%;
+}
+
+.loading {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.visible{
+  display: flex;
+}
+.oculto{
+  display:none;
+}
+
+.centrarLoading{
+   width: 5rem;
+   height: 5rem;
+
+}
+
+.rotar {
+  animation:rotate 1s steps(5) infinite;
+}
+
+
+@keyframes rotate {
+  0%{
+    transform:rotate(0deg);
+  }
+  25%{
+    transform:rotate(90deg);
+  }
+  50%{
+    transform:rotate(180deg);
+  }
+  75%{
+    transform:rotate(270deg);
+  }
+  100%{
+    transform:rotate(360deg);
+  }
 }
