--- a/TP5/EntregaFinal/styles/style.css
+++ b/TP5/EntregaFinal/styles/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  background-color: #f4f0f5;
-  font-family: Roboto;
+  background-color: #f4f0f5 !important;
+  font-family: Roboto !important;
   font-style: normal;
 }
 
@@ -73,7 +73,6 @@ img {
 .fotoPerfil {
   position: relative;
   left: 10px;
-  top: 5px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -81,10 +80,17 @@ img {
 
 .fotoProfile {
   position: relative;
-  left: 10px;
-  top: 5px;
+  left: 10px; 
   width: 80px;
   height: 80px;
+  border-radius: 50%;
+}
+
+.fotoProfileSinTop {
+  position: relative;
+  left: 10px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
 }
 
@@ -113,6 +119,7 @@ img {
   display: flex;
   height: 50px;
   flex-direction: row;
+  align-items: center;
 }
 
 .hprofile {
@@ -132,11 +139,11 @@ img {
   flex-direction: column;
   position: relative;
   left: 15px;
-  top: 5px;
+
 }
 
 h4 {
-  margin: 5px 0 1px 0;
+  margin: 5px 0 1px 0 !important;
 }
 
 span {
@@ -209,19 +216,19 @@ text {
 }
 
 .posTextChatInHeader {
-  margin-left: 10px;
+  margin-left: 10px !important;
 }
 .posIconSearch {
-  margin-left: 0.5rem;
+  margin-left: 0.5rem !important;
   align-items: center;
 }
 
 .posCloseChatInHeader {
-  margin-right: 10px;
+  margin-right: 10px !important;
 }
 
 .posCloseChatInHeaderPosRow{
-  margin-right: 10px;
+  margin-right: 10px !important;
   display: flex;
   flex-direction: row;
   position: relative;
@@ -230,8 +237,8 @@ text {
 
 
 .searchInChat {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 2rem !important;
+  margin-right: 2rem !important;
   width: 70%;
   max-width: 250px;
   height: 1.3rem;
@@ -244,7 +251,7 @@ text {
 }
 
 .textSearch {
-  margin-left: 0.5rem;
+  margin-left: 0.5rem !important;
   font-size: 90%;
 }
 
@@ -282,7 +289,6 @@ text {
 .fotoPerfilChat{
   position: relative;
   left: 1rem;
-  top: 5px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -293,8 +299,8 @@ text {
 }
 
 .boxDialogoEl {
-  margin-left: 0.5rem;
-  margin-right: 2rem;
+  margin-left: 0.5rem !important;
+  margin-right: 2rem !important;
   /*width: 40%;*/
   /*width:fit-content;*/
   max-width: 250px;
@@ -340,15 +346,15 @@ text {
 
 .textSearch {
   /*margin-left: 1rem;*/
-  margin-right: 0.2rem;
+  margin-right: 0.2rem !important;
   font-size: 90%;
 }
 
 
 
 .boxDialogoYo {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
+  margin-left: 0.5rem !important;
+  margin-right: 0.5rem !important;
   /*width: 40%;*/
   /*width:fit-content;*/
   max-width: 250px;
@@ -364,7 +370,7 @@ text {
 }
 
 h2 {
-  margin: 0;
+  margin: 0 !important;
 }
 
 .botonera-reaction {
@@ -380,7 +386,7 @@ h2 {
   height: 15px;
   opacity: 0.75;
   font-size: 10px;
-  margin: 0 10px;
+  margin: 0 10px !important;
   display: flex;
   justify-content: space-around;
 }
@@ -429,7 +435,7 @@ input::placeholder {
 
 
 .inp-search {
-  width: 70%;
+  width: 80%;
   height: 1.3rem;
   border-radius: 5px;
   background-color: #f4f0f5;
@@ -503,4 +509,43 @@ input::placeholder {
   100%{
     transform:rotate(360deg);
   }
+}
+
+.filter-search{
+  display: flex;
+    position: fixed;
+    top: 70px;
+    background: #f7fcff;
+    width: 100%;
+    justify-content: space-evenly;
+    z-index: 1;
+}
+
+.filter-search button {
+  background: none;
+  border: none;
+}
+
+
+.section-search{
+  top: 100px;
+  position: relative;
+  
+}
+
+
+.searchCard {
+  display: flex;
+  align-items: center;
+  background: #ffffff;
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+  margin: 10px 0;
+}
+
+
+.sub-search {
+  width: 100%;
+  text-align: center;
+  font-weight: 300; 
+
 }
