--- a/TP5/EntregaFinal/styles/style.css
+++ b/TP5/EntregaFinal/styles/style.css
@@ -522,8 +522,10 @@ input::placeholder {
 }
 
 .filter-search button {
+  margin:5px 0;
   background: none;
   border: none;
+  border-radius: ;
 }
 
 
@@ -548,4 +550,9 @@ input::placeholder {
   text-align: center;
   font-weight: 300; 
 
+}
+
+
+.filter-search .activo {
+  font-weight: bold;
 }
