--- a/TP5/EntregaFinal/styles/style.css
+++ b/TP5/EntregaFinal/styles/style.css
@@ -59,8 +59,11 @@ img {
 }
 
 .addPost {
-  width: 100%;
-  height: 50px;
+  margin-left: 12% !important;
+  padding-top: 1.5%;
+  width: 75%;
+  height: 45px;
+  border-radius: 5%;
   background: #ffffff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -565,4 +568,13 @@ input::placeholder {
 
 .colorDiskLike{
   color  : rgb(73, 3, 73);
+}
+
+.addPostCampo{
+  display: flex;
+  width: 100%;
+  height: 33px;
+  opacity: 0.75;
+  justify-content: space-evenly;
+  align-items: center;
 }
